--- a/index.html
+++ b/index.html
@@ -60,7 +60,85 @@
             <h1>Newest Products</h1>
             <p>Have a look at some our latest products</p><hr>
         </div>
-        
+        <div class="new-product-grid">
+          <div class="product">
+            <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arflex Sofa">
+            <div class="product-info">
+              <p>Arflex</p>
+              <h3>Marenco Sofa</h3>
+              <p>£700.00</p>
+            </div>
+          </div>
+          <div class="product">
+            <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arcadia Dining Chair">
+            <div class="product-info">
+              <p>Cattelan Italia</p>
+              <h3>Arcadia Dining Chair</h3>
+              <p>£527.00</p>
+            </div>
+          </div>
+          <div class="product">
+            <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arflex Sofa">
+            <div class="product-info">
+              <p>B&B Italia</p>
+              <h3>Sake Corner Sofa</h3>
+              <p>£12,400.00</p>
+            </div>
+          </div>
+          <div class="product">
+            <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arflex Sofa">
+            <div class="product-info">
+              <p>Arflex</p>
+              <h3>Marenco Sofa</h3>
+              <p>£700.00</p>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="flex">
+        <section>
+            <img src="/Assets/Images/Featured Products/item 1.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
+            <a href="/Pages/Products/arflex_sofa.html"><h4>Marenco Sofa</h4>
+            <p>Arflex</p></a>
+            <aside>
+              <ul>
+                <li>£700.00</li>
+                <li>In Stock</li>
+              </ul>
+            </aside>
+        </section>
+        <section>
+            <img src="/Assets/Images/Featured Products/item 2.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
+            <a href="#"><h4>Dining Chair</h4>
+            <p>Arcadia</p></a>
+            <aside>               
+              <ul>
+                <li> £527.00</li>
+                <li>In Stock</li>
+              </ul>
+            </aside>
+        </section>
+        <section>
+            <img src="/Assets/Images/Featured Products/item 3.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
+            <a href="#"><h4>Sake Corner Sofa</h4>
+            <p>B&B Italia</p></a>
+            <aside>
+              <ul>
+                <li> £12,400.00</li>
+                <li>In Stock</li>
+              </ul>
+            </aside>
+        </section>
+        <section>
+            <img src="/Assets/Images/Featured Products/item 4.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
+            <a href="#"><h4>Globe Sky Pendant Light</h4>
+            <p>N/A</p></a>
+            <aside>
+              <ul>
+                <li>£133.00</li>
+                <li>In Stock</li>
+              </ul>
+            </aside>        
+        </section>       -->
         
         </div>
         <button class="btn3"><a href="/Pages/featured.html">View More</a></button>
