--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <li>
                 <a href="#" class="nav-links">Showroom</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="/Pages/collections.html" class="nav-links">Collections</a>
-            </li>
+            </li> -->
             <li>
                 <a href="#" class="nav-links">Services</a>
             </li>
@@ -57,7 +57,7 @@
     <main>
       <div class="container">
         <div class="title-text">
-            <h1>Newest Products</h1>
+            <h2>Newest Products</h2>
             <p>Have a look at some our latest products</p><hr>
         </div>
         <div class="new-product-grid">
@@ -94,52 +94,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="flex">
-        <section>
-            <img src="/Assets/Images/Featured Products/item 1.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
-            <a href="/Pages/Products/arflex_sofa.html"><h4>Marenco Sofa</h4>
-            <p>Arflex</p></a>
-            <aside>
-              <ul>
-                <li>£700.00</li>
-                <li>In Stock</li>
-              </ul>
-            </aside>
-        </section>
-        <section>
-            <img src="/Assets/Images/Featured Products/item 2.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
-            <a href="#"><h4>Dining Chair</h4>
-            <p>Arcadia</p></a>
-            <aside>               
-              <ul>
-                <li> £527.00</li>
-                <li>In Stock</li>
-              </ul>
-            </aside>
-        </section>
-        <section>
-            <img src="/Assets/Images/Featured Products/item 3.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
-            <a href="#"><h4>Sake Corner Sofa</h4>
-            <p>B&B Italia</p></a>
-            <aside>
-              <ul>
-                <li> £12,400.00</li>
-                <li>In Stock</li>
-              </ul>
-            </aside>
-        </section>
-        <section>
-            <img src="/Assets/Images/Featured Products/item 4.jpg" alt="Smartphone" class="js-zoom-effect" onclick="startZoom(this)" onmouseleave="stopZoom(this)"/>
-            <a href="#"><h4>Globe Sky Pendant Light</h4>
-            <p>N/A</p></a>
-            <aside>
-              <ul>
-                <li>£133.00</li>
-                <li>In Stock</li>
-              </ul>
-            </aside>        
-        </section>       -->
-        
+       
         </div>
         <button class="btn3"><a href="/Pages/featured.html">View More</a></button>
 
@@ -150,7 +105,7 @@
                 <button class="btn1">Discover</button>
             </div>
         </div> <!--Product Grid-->
-            <div class="title-text">
+            <!-- <div class="title-text">
               <h1>Explore Collections</h1>
               <p>Including the latest furniture collections available here at Le Luxe</p><hr>
             </div>
@@ -173,12 +128,12 @@
                 </div>
               </div>
             </div>
-        </div>
+        </div> -->
 
         <section class="category-grid"> <!--Product Category Grid-->
 
                 <div class="title-text">
-                    <h1>Shop Categories</h1>
+                    <h2>Shop Categories</h2>
                     <p>View all of our categories where you can find a range of products</p><hr>
                 </div>
                 <div class="column-grid1">
@@ -222,7 +177,7 @@
         <section class="gallery"><!--Social Media Gallery Section-->
 
                 <div class="title-text">
-                    <h1>Be Inspired</h1>
+                    <h2>Be Inspired</h2>
                     <p>See how our customers style their home with our designs and furniture. Showcase your own style by using <b>#LeLuxe</b> on Instagram</p><hr>
                 </div>
                 <div class="column-grid1">
