changed class name of section & grid, changed display of category cards from flexbox to grid for better visual design

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
             </div>
         </div> -->
 
-        <section class="category-grid"> <!--Product Category Grid-->
+        <section class="categories"> <!--Product Category Grid-->
 
                 <div class="title-text">
                     <h2>Shop Categories</h2>
                     <p>View all of our categories where you can find a range of products</p><hr>
                 </div>
-                <div class="column-grid1">
+                <div class="category-grid">
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
                         <h4><a href="/Pages/Categories/sofas.html">Sofas</a></h4>
