update index.html - changed h tag of category title and added hyperlink button for external castegory pages

--- a/index.html
+++ b/index.html
@@ -139,27 +139,33 @@
                 <div class="category-grid">
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
-                        <h4><a href="/Pages/Categories/sofas.html">Sofas</a></h4>
+                        <h3>Sofas</h3>
+                        <h4 cat-link>Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/chairs-thumb.jpg" alt="Category 1">
-                        <h4><a href="/Pages/Categories/dining_chairs.html">Dining Chairs</a></h4>                       
+                        <h3>Dining Chairs</h3>
+                        <h4 cat-link>Shop now</h4>                       
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/tables-thumb.jpg" alt="Category 1">
-                        <h4><a href="/Pages/Categories/tables.html">Tables</a></h4>
+                        <h3>Tables</h3>
+                        <h4 cat-link>Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/lighting-dumb.jpg" alt="Category 1">
-                        <h4><a href="/Pages/Categories/lighting.html">Lighting</a></h4>
+                        <h3>Lighting</h3>
+                        <h4 cat-link>Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/bedroom-thumb.jpg" alt="Category 1">
-                        <h4><a href="/Pages/Categories/bedroom.html">Bedroom</a></h4>
+                        <h3>Bedroom</h3>
+                        <h4 cat-link>Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/acc-thumb.jpg" alt="Category 1">
-                        <h4><a href="/Pages/Categories/Accessories.html">Accessories</a></h4>
+                        <h3>Accessories</h3>
+                        <h4 cat-link>Shop now</h4>
                     </div>
                     
                 </div>
@@ -180,7 +186,7 @@
                     <h2>Be Inspired</h2>
                     <p>See how our customers style their home with our designs and furniture. Showcase your own style by using <b>#LeLuxe</b> on Instagram</p><hr>
                 </div>
-                <div class="column-grid1">
+                <div class="category-grid">
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
                     </div>
