update index.html - added class names to heading hyperlink under category cards

--- a/index.html
+++ b/index.html
@@ -140,32 +140,32 @@
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
                         <h3>Sofas</h3>
-                        <h4 cat-link>Shop now</h4>
+                        <h4 class="cat-link">Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/chairs-thumb.jpg" alt="Category 1">
                         <h3>Dining Chairs</h3>
-                        <h4 cat-link>Shop now</h4>                       
+                        <h4 class="cat-link">Shop now</h4>                       
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/tables-thumb.jpg" alt="Category 1">
                         <h3>Tables</h3>
-                        <h4 cat-link>Shop now</h4>
+                        <h4 class="cat-link">Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/lighting-dumb.jpg" alt="Category 1">
                         <h3>Lighting</h3>
-                        <h4 cat-link>Shop now</h4>
+                        <h4 class="cat-link">Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/bedroom-thumb.jpg" alt="Category 1">
                         <h3>Bedroom</h3>
-                        <h4 cat-link>Shop now</h4>
+                        <h4 class="cat-link">Shop now</h4>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/acc-thumb.jpg" alt="Category 1">
                         <h3>Accessories</h3>
-                        <h4 cat-link>Shop now</h4>
+                        <h4 class="cat-link">Shop now</h4>
                     </div>
                     
                 </div>
