--- a/index.html
+++ b/index.html
@@ -139,33 +139,45 @@
                 <div class="category-grid">
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
-                        <h3>Sofas</h3>
-                        <h4 class="cat-link">Shop now</h4>
+                        <div class="category-desc">
+                          <h3>Sofas</h3>
+                          <h4>Shop now</h4>
+                        </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/chairs-thumb.jpg" alt="Category 1">
-                        <h3>Dining Chairs</h3>
-                        <h4 class="cat-link">Shop now</h4>                       
+                        <div class="category-desc">
+                          <h3>Dining Chairs</h3>
+                          <h4>Shop now</h4>                       
+                        </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/tables-thumb.jpg" alt="Category 1">
-                        <h3>Tables</h3>
-                        <h4 class="cat-link">Shop now</h4>
+                        <div class="category-desc">
+                          <h3>Tables</h3>
+                          <h4>Shop now</h4>
+                        </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/lighting-dumb.jpg" alt="Category 1">
-                        <h3>Lighting</h3>
-                        <h4 class="cat-link">Shop now</h4>
+                        <div class="category-desc">
+                          <h3>Lighting</h3>
+                          <h4>Shop now</h4>
+                        </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/bedroom-thumb.jpg" alt="Category 1">
-                        <h3>Bedroom</h3>
-                        <h4 class="cat-link">Shop now</h4>
+                        <div class="category-desc">
+                          <h3>Bedroom</h3>
+                          <h4>Shop now</h4>
+                        </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/acc-thumb.jpg" alt="Category 1">
-                        <h3>Accessories</h3>
-                        <h4 class="cat-link">Shop now</h4>
+                        <div class="category-desc">
+                          <h3>Accessories</h3>
+                          <h4>Shop now</h4>
+                        </div>
                     </div>
                     
                 </div>
