minor styling to category desc heading

--- a/index.html
+++ b/index.html
@@ -141,42 +141,42 @@
                         <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
                         <div class="category-desc">
                           <h3>Sofas</h3>
-                          <h4>Shop now</h4>
+                          <h4><a href="#">Shop now</a></h4>
                         </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/chairs-thumb.jpg" alt="Category 1">
                         <div class="category-desc">
                           <h3>Dining Chairs</h3>
-                          <h4>Shop now</h4>                       
+                          <h4><a href="#">Shop now</a></h4>                       
                         </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/tables-thumb.jpg" alt="Category 1">
                         <div class="category-desc">
                           <h3>Tables</h3>
-                          <h4>Shop now</h4>
+                          <h4><a href="#">Shop now</a></h4>
                         </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/lighting-dumb.jpg" alt="Category 1">
                         <div class="category-desc">
                           <h3>Lighting</h3>
-                          <h4>Shop now</h4>
+                          <h4><a href="#">Shop now</a></h4>
                         </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/bedroom-thumb.jpg" alt="Category 1">
                         <div class="category-desc">
                           <h3>Bedroom</h3>
-                          <h4>Shop now</h4>
+                          <h4><a href="#">Shop now</a></h4>
                         </div>
                     </div>
                     <div class="cat-item">
                         <img src="/Assets/Images/Category Photos/acc-thumb.jpg" alt="Category 1">
                         <div class="category-desc">
                           <h3>Accessories</h3>
-                          <h4>Shop now</h4>
+                          <h4><a href="#">Shop now</a></h4>
                         </div>
                     </div>
                     
