update index.html - renamed button classes on homepage

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div id= "hero"> <!--Hero Section-->
         <div class="text-container">
             <h1>New Collections Available!</h1>
-            <p>coming with fast free delivery</p>
-            <button class="btn1"><a href="/Pages/collections.html">Shop Now</a></button>
+            <p>*Coming with fast free delivery*</p>
+            <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
         </div>
     </div>
 
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <button class="btn3"><a href="/Pages/featured.html">View More</a></button>          
+          <button class="view-more-btn"><a href="/Pages/featured.html">View More</a></button>          
         </div>
       </section>
 
@@ -104,7 +104,7 @@
         <div class="text-container">
           <p>Brand Spotlight</p>
           <h1>Arflex</h1>                
-          <button class="btn1">Discover</button>
+          <button class="banner-btn">Discover</button>
         </div>
       </div> 
       <!--Product Grid-->
@@ -190,7 +190,7 @@
         <div class="text-container">
             <p>Other Services</p>
             <h1>Interior Design Services</h1>
-            <button class="btn1">Learn More</button>
+            <button class="banner-btn">Learn More</button>
         </div>
       </div>
 
@@ -229,7 +229,7 @@
               <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
             </div>
           </div>
-          <button class="btn3">View More</button>
+          <button class="view-more-btn">View More</button>
         </div>            
       </section>
       
