update index.html - added images for latest product items

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </div>
             </div>
             <div class="product">
-              <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arcadia Dining Chair">
+              <img src="/Assets/Images/Featured Products/item 2.jpg" alt="Arcadia Dining Chair">
               <div class="product-info">
                 <p>Cattelan Italia</p>
                 <h3>Arcadia Dining Chair</h3>
@@ -79,7 +79,7 @@
               </div>
             </div>
             <div class="product">
-              <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arflex Sofa">
+              <img src="/Assets/Images/Product Images/B&Bitalia_ sakecornersofa.jpg" alt="B&B Italia Sofa">
               <div class="product-info">
                 <p>B&B Italia</p>
                 <h3>Sake Corner Sofa</h3>
