update index.html - fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="container">
           <div class="title-text">
             <h2>Be Inspired</h2>
-            <p>See how our customers style their home with our designs and furniture. Showcase your own style by us<b>#LeLuxe</b> on Instagram</p><hr>
+            <p>See how our customers style their home with our designs and furniture. Showcase your own style by using <b>#LeLuxe</b> on Instagram</p><hr>
           </div>
           <div class="category-grid">
             <div class="cat-item">
