update featured.html - fixed spelling mistake

--- a/Pages/featured.html
+++ b/Pages/featured.html
@@ -52,12 +52,12 @@
     </div>
 
     <main>
-      <div class="mini-nav">
-        <p><a href="/index.html"><span class="bold-word">Home</span></a> > Newest Arrivals</p>
-      </div>
       
       <section>
         <div class="container">
+          <div class="mini-nav">
+            <p><a href="/index.html"><span class="bold-word">Home</span></a> > Newest Arrivals</p>
+          </div>
           <div class="subtitle-heading">
             <h4>Category</h4>
           </div>    
@@ -91,7 +91,6 @@
       </section>
         
       <nav class="product-filter"> <!--Product Sort & Filter-->
-
         <p> Showing all 24 Products</p>
 
         <div class="sort">
@@ -170,7 +169,7 @@
             <div class="product">
               <img src="/Assets/Images/Featured Products/dining-table-atmosfera.jpg" alt="Dining table">
               <div class="product-info">
-                <p>Atmosferap>
+                <p>Atmosfera</p>
                 <h3>Dining Table</h3>
                 <p>£527.00</p>
               </div>
