update featued.html - added another item to the product grid

--- a/Pages/featured.html
+++ b/Pages/featured.html
@@ -59,7 +59,7 @@
             <p><a href="/index.html"><span class="bold-word">Home</span></a> > Newest Arrivals</p>
           </div>
           <div class="subtitle-heading">
-            <h4>Category</h4>
+            <h4>Category -</h4>
           </div>    
           <div class="cat-icons"> <!-- Category filter icons-->
             <div class="icon">
@@ -91,7 +91,7 @@
       </section>
         
       <nav class="product-filter"> <!--Product Sort & Filter-->
-        <p> Showing all 24 Products</p>
+        <p> Showing all 8 Products</p>
 
         <div class="sort">
 
@@ -172,6 +172,14 @@
                 <p>Atmosfera</p>
                 <h3>Dining Table</h3>
                 <p>£527.00</p>
+              </div>
+            </div>
+            <div class="product">
+              <img src="/Assets/Images/Featured Products/skynest-light.png" alt="Pendant light">
+              <div class="product-info">
+                <p>Flos</p>
+                <h3>Skynest Pendant Light</h3>
+                <p>£2,400.00</p>
               </div>
             </div>
           </div>
