--- a/Pages/featured.html
+++ b/Pages/featured.html
@@ -121,9 +121,9 @@
             <div class="product">
               <img src="/Assets/Images/Featured Products/item 1.jpg" alt="Arflex Sofa">
               <div class="product-info">
-                <p>Arflex</p>
+                <a href="/Pages/Products/arflex_sofa.html"><p>Arflex</p>
                 <h3>Marenco Sofa</h3>
-                <p>£700.00</p>
+                <p>£700.00</p></a>
               </div>
             </div>
             <div class="product">
