changed font sizes on product page, commented out some content to test layout

--- a/Pages/Products/arflex_sofa.html
+++ b/Pages/Products/arflex_sofa.html
@@ -47,7 +47,7 @@
 
     <main>
         <div class="mini-nav">
-            <p><a href="/index.html"><span class="bold-word">Home</span></a> > <a href="/Pages/featured.html"><span class="bold-word">Newest Arrivals</span></a> > Arflex Marenco Sofa</p>
+          <p><a href="/index.html"><span class="bold-word">Home</span></a> > <a href="/Pages/featured.html"><span class="bold-word">Newest Arrivals</span></a> > Arflex Marenco Sofa</p>
         </div>
 
         <section>
@@ -68,10 +68,10 @@
                         <h2>Marenco Sofa</h2>
                         <h4>£700</h4>
                         <div class="description">
-                            <p>Colour:</p>
+                            <!-- <p>Colour:</p> -->
                             <p><i class="fa fa-globe"></i>Free worldwide shipping available</p>
                             <p><i class="fa fa-truck"></i>Estimated uk delivery time: 3 working days</p>
-                            <p><i class="fa fa-box"></i>Only 3 remaining in stock!</p>
+                            <!-- <p><i class="fa fa-box"></i>Only 3 remaining in stock!</p> -->
                             <button class="cta-btn">add to basket</button>
                             <p><a href="#"><i class="fa fa-heart"></i>Add to wishlist</a></p>
                         </div>
