--- a/Pages/Products/arflex_sofa.html
+++ b/Pages/Products/arflex_sofa.html
@@ -63,89 +63,80 @@
                       <img class="img-overlay" src="/Assets/Images/Featured Products/item 1.jpg" alt="Arflex Marenco Sofa">
                     </div>
                   </div>
-                    <div class="product-details">
-                        <p>Arflex</p>
-                        <h2>Marenco Sofa</h2>
-                        <h4>£700</h4>
-                        <div class="description">
-                            <!-- <p>Colour:</p> -->
-                            <p><i class="fa fa-globe"></i>Free worldwide shipping available</p>
-                            <p><i class="fa fa-truck"></i>Estimated uk delivery time: 3 working days</p>
-                            <!-- <p><i class="fa fa-box"></i>Only 3 remaining in stock!</p> -->
-                            <button class="cta-btn">add to basket</button>
-                            <p><a href="#"><i class="fa fa-heart"></i>Add to wishlist</a></p>
-                        </div>
-                        <div class="more-information">
-                          <button class="collapse-heading">Product Information</button>
-                          <div class="collapse-content">
-                            <p>Description</p>
-                            <p>Introducing the Arflex Marenco Sofa, a masterpiece of contemporary design and exceptional comfort. Crafted with meticulous attention to detail, this sofa embodies the perfect blend of style and functionality, making it a stunning addition to any modern living space.</p>
-                          </div>
-                          <button class="collapse-heading">Dimensions</button>
-                          <div class="collapse-content">
-                            <p>Dimensions</p>
-                            <p>Large Two Seater Sofa: W 254 x D 96 x H 70 cm. Seat height: 41 cm.</p>
-                          </div>
-                          <button class="collapse-heading">Delivery & Returns</button>
-                          <div class="collapse-content">
-                            <p>Delivery</p>
-                            <p>Most furniture and large items are delivered by our two-man Furniture Delivery service. <br><br>Typical delivery time scales for Items not held in stock are indicated on the relevant product page. We will advise you of the expected delivery date by telephone and/or email. <br><br>We deliver Monday to Saturday. We will advise you whether to expect delivery in the morning (7am-12noon) or afternoon (12noon-3pm) and the delivery driver will contact you on the day of delivery, approximately 2 hours before they expect to arrive.</p>
-                          </div>
-                        </div>
+                  <div class="product-details">
+                    <p>Arflex</p>
+                    <h2>Marenco Sofa</h2>
+                    <h4>£700</h4>
+                    <div class="description">
+                        <!-- <p>Colour:</p> -->
+                        <p><i class="fa fa-globe"></i>Free worldwide shipping available</p>
+                        <p><i class="fa fa-truck"></i>Estimated uk delivery time: 3 working days</p>
+                        <!-- <p><i class="fa fa-box"></i>Only 3 remaining in stock!</p> -->
+                        <button class="cta-btn">add to basket</button>
+                        <p><a href="#"><i class="fa fa-heart"></i>Add to wishlist</a></p>
                     </div>
+                    <div class="more-information">
+                      <button class="collapse-heading">Product Information</button>
+                      <div class="collapse-content">
+                        <p>Description</p>
+                        <p>Introducing the Arflex Marenco Sofa, a masterpiece of contemporary design and exceptional comfort. Crafted with meticulous attention to detail, this sofa embodies the perfect blend of style and functionality, making it a stunning addition to any modern living space.</p>
+                      </div>
+                      <button class="collapse-heading">Dimensions</button>
+                      <div class="collapse-content">
+                        <p>Dimensions</p>
+                        <p>Large Two Seater Sofa: W 254 x D 96 x H 70 cm. Seat height: 41 cm.</p>
+                      </div>
+                      <button class="collapse-heading">Delivery & Returns</button>
+                      <div class="collapse-content">
+                        <p>Delivery</p>
+                        <p>Most furniture and large items are delivered by our two-man Furniture Delivery service. <br><br>Typical delivery time scales for Items not held in stock are indicated on the relevant product page. We will advise you of the expected delivery date by telephone and/or email. <br><br>We deliver Monday to Saturday. We will advise you whether to expect delivery in the morning (7am-12noon) or afternoon (12noon-3pm) and the delivery driver will contact you on the day of delivery, approximately 2 hours before they expect to arrive.</p>
+                      </div>
+                    </div>
+                  </div>
               </div>
-              
-
-              <div class="suggested-products">
-                <div class="title-heading">
-                  <h2>You might also like</h2>
-                </div>
-                <div class="product-grid">
-                  <div class="grid-item">
-                    <img src="/Assets/Images/Product Images/cgamfratesi_cornersofa.jpg" alt="Gubi Flaneur Corner Sofa">
-                    <div class="item-desc">
-                      <a href="#"><h4>Gubi Flaneur Corner Sofa</h4>
-                      <p>£5,298.00</p></a>
-                    </div>
-                  </div>
-                  <div class="grid-item">
-                    <img src="/Assets/Images/Product Images/B&Bitalia_ sakecornersofa.jpg" alt="B&B Italia Sake Corner Sofa">
-                    <div class="item-desc">
-                      <a href="#"><h4>B&B Italia Sake Corner Sofa</h4>
-                      <p>£14,000.00</p></a>
-                    </div>
-                  </div>
-                  <div class="grid-item">
-                    <img src="/Assets/Images/Product Images/caneline_cornersofa.jpg" alt="Cane Line Corner Sofa">
-                    <div class="item-desc">
-                      <a href="#"><h4>Cane Line Corner Sofa</h4>
-                      <p>£7,950.00</p></a>
-                    </div>
-                  </div>
-                  <div class="grid-item">
-                    <img src="/Assets/Images/Product Images/gubi_3seatersofa.jpg" alt="Gubi Wonder Three Seater Sofa">
-                    <div class="item-desc">
-                      <a href="#"><h4>Gubi Three Seater Sofa</h4>
-                      <p>£5,499.00</p></a>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-            </div>
+            </div>  
         </section>
+        
+        <section>
+          <div class="suggested-products">
+            <div class="title-heading">
+              <h2>You might also like</h2>
+            </div>
+            <div class="product-grid">
+              <div class="grid-item">
+                <img src="/Assets/Images/Product Images/cgamfratesi_cornersofa.jpg" alt="Gubi Flaneur Corner Sofa">
+                <div class="item-desc">
+                  <a href="#"><h4>Gubi Flaneur Corner Sofa</h4>
+                  <p>£5,298.00</p></a>
+                </div>
+              </div>
+              <div class="grid-item">
+                <img src="/Assets/Images/Product Images/B&Bitalia_ sakecornersofa.jpg" alt="B&B Italia Sake Corner Sofa">
+                <div class="item-desc">
+                  <a href="#"><h4>B&B Italia Sake Corner Sofa</h4>
+                  <p>£14,000.00</p></a>
+                </div>
+              </div>
+              <div class="grid-item">
+                <img src="/Assets/Images/Product Images/caneline_cornersofa.jpg" alt="Cane Line Corner Sofa">
+                <div class="item-desc">
+                  <a href="#"><h4>Cane Line Corner Sofa</h4>
+                  <p>£7,950.00</p></a>
+                </div>
+              </div>
+              <div class="grid-item">
+                <img src="/Assets/Images/Product Images/gubi_3seatersofa.jpg" alt="Gubi Wonder Three Seater Sofa">
+                <div class="item-desc">
+                  <a href="#"><h4>Gubi Three Seater Sofa</h4>
+                  <p>£5,499.00</p></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
     </main>
-
-
-
-
-
-
-
-
-
-
 
     <footer>
         <!-- FOOTER SECTION-->
