added minor styling across product page, adjusted container paddings, rearrangd sugeested product section

--- a/Pages/Products/arflex_sofa.html
+++ b/Pages/Products/arflex_sofa.html
@@ -99,40 +99,46 @@
         
         <section>
           <div class="suggested-products">
-            <div class="title-heading">
-              <h2>You might also like</h2>
+            <div class="container">
+              <div class="title-heading">
+                <h2>You might also like</h2>
+              </div>
+              <div class="product-grid">
+                <div class="grid-item">
+                  <img src="/Assets/Images/Product Images/cgamfratesi_cornersofa.jpg" alt="Gubi Flaneur Corner Sofa">
+                  <div class="item-desc">
+                    <a href="#"><p>Gubi Flaneur </p>
+                    <h3>Corner Sofa</h3>
+                    <p>£5,298.00</p></a>
+                  </div>
+                </div>
+                <div class="grid-item">
+                  <img src="/Assets/Images/Product Images/B&Bitalia_ sakecornersofa.jpg" alt="B&B Italia Sake Corner Sofa">
+                  <div class="item-desc">
+                    <a href="#"><p>B&B Italia</p>
+                    <h3>Sake Corner Sofa</h3>
+                    <p>£14,000.00</p></a>
+                  </div>
+                </div>
+                <div class="grid-item">
+                  <img src="/Assets/Images/Product Images/caneline_cornersofa.jpg" alt="Cane Line Corner Sofa">
+                  <div class="item-desc">
+                    <a href="#"><p>Cane Line</p>
+                    <h3>Corner Sofa</h3>
+                    <p>£7,950.00</p></a>
+                  </div>
+                </div>
+                <div class="grid-item">
+                  <img src="/Assets/Images/Product Images/gubi_3seatersofa.jpg" alt="Gubi Wonder Three Seater Sofa">
+                  <div class="item-desc">
+                    <a href="#"><p>Gubi</p>
+                    <h3>Three Seater Sofa</h3>
+                    <p>£5,499.00</p></a>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="product-grid">
-              <div class="grid-item">
-                <img src="/Assets/Images/Product Images/cgamfratesi_cornersofa.jpg" alt="Gubi Flaneur Corner Sofa">
-                <div class="item-desc">
-                  <a href="#"><h4>Gubi Flaneur Corner Sofa</h4>
-                  <p>£5,298.00</p></a>
-                </div>
-              </div>
-              <div class="grid-item">
-                <img src="/Assets/Images/Product Images/B&Bitalia_ sakecornersofa.jpg" alt="B&B Italia Sake Corner Sofa">
-                <div class="item-desc">
-                  <a href="#"><h4>B&B Italia Sake Corner Sofa</h4>
-                  <p>£14,000.00</p></a>
-                </div>
-              </div>
-              <div class="grid-item">
-                <img src="/Assets/Images/Product Images/caneline_cornersofa.jpg" alt="Cane Line Corner Sofa">
-                <div class="item-desc">
-                  <a href="#"><h4>Cane Line Corner Sofa</h4>
-                  <p>£7,950.00</p></a>
-                </div>
-              </div>
-              <div class="grid-item">
-                <img src="/Assets/Images/Product Images/gubi_3seatersofa.jpg" alt="Gubi Wonder Three Seater Sofa">
-                <div class="item-desc">
-                  <a href="#"><h4>Gubi Three Seater Sofa</h4>
-                  <p>£5,499.00</p></a>
-                </div>
-              </div>
             </div>
-          </div>
         </section>
 
 
