--- a/Pages/account_page.html
+++ b/Pages/account_page.html
@@ -73,9 +73,7 @@
                       <label for="" class="label">Confirm Password</label>
                     </div>
               
-                    <input type="submit" class="submitBtn" value="Sign up">
-
-                    
+                    <button type="submit" class="form-button" id="submit" onclick="formValidation()">Sign up</button>                   
                 </form>
             </div>
         </div>
