update index.html - fixed spelling error

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div class="product">
               <img src="/Assets/Images/Product Images/arflex_sofa.jpg" alt="Arflex Sofa">
               <div class="product-info">
-                <p>Arflex</p>
+                <a href="/Pages/Products/arflex_sofa.html"><p>Arflex</p>
                 <h3>Marenco Sofa</h3>
-                <p>£700.00</p>
+                <p>£700.00</p></a>
               </div>
             </div>
             <div class="product">
