update index.html - re-added collections section

--- a/index.html
+++ b/index.html
@@ -107,31 +107,33 @@
           <button class="banner-btn">Discover</button>
         </div>
       </div> 
-      <!--Product Grid-->
-            <!-- <div class="title-text">
-              <h1>Explore Collections</h1>
-              <p>Including the latest furniture collections available here at Le Luxe</p><hr>
-            </div>
-              
-            <div class="card-grid-collections">
-              <div class="card-item">
-                <img src="/Assets/Images/New Collection/home-office.jpg">
-                <div class="card-info">
-                  <h4><a href="#">Home Office Workspace</a></h4>
-                  <p><a href="#">Design a home office to tailored to your needs providing comfort with contemporary desk designs</a></p>
-                  <button class="btn2"><a href="#">Shop Collection</a></button>
-                </div>
-              </div>
-              <div class="card-item">
-                <img src="/Assets/Images/New Collection/outdoor-seating.jpg">
-                <div class="card-info">
-                  <h4><a href="#">Garden Renovation</a></h4>
-                  <p><a href="#">Transform your garden into a warm and modern outdoor seating area with stylish desks & chairs</a></p>
-                  <button class="btn2"><a href="#">Shop Collection</a></button>
-                </div>
+
+      <section id="collections">
+        <div class="container">
+          <div class="title-text">
+            <h2>Explore Collections</h2>
+            <p>Including the latest furniture collections available here at Le Luxe</p><hr>
+          </div>              
+          <div class="card-grid-collections">
+            <div class="card-item">
+              <img src="/Assets/Images/New Collection/home-office.jpg">
+              <div class="card-info">
+                <h4><a href="#">Home Office Workspace</a></h4>
+                <p><a href="#">Design a home office to tailored to your needs providing comfort with contemporary desk designs</a></p>
+                <button class="btn2"><a href="#">Shop Collection</a></button>
               </div>
             </div>
-      </div> -->
+            <div class="card-item">
+              <img src="/Assets/Images/New Collection/outdoor-seating.jpg">
+              <div class="card-info">
+                <h4><a href="#">Garden Renovation</a></h4>
+                <p><a href="#">Transform your garden into a warm and modern outdoor seating area with stylish desks & chairs</a></p>
+                <button class="btn2"><a href="#">Shop Collection</a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section class="categories"> <!--Product Category Grid-->
         <div class="container">
