update index.html - changed images on the gallery section

--- a/index.html
+++ b/index.html
@@ -204,22 +204,22 @@
           </div>
           <div class="category-grid">
             <div class="cat-item">
-              <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
+              <img src="/Assets/Images/Gallery/photo_1.jpg" alt="Orange Sofa">
             </div>
             <div class="cat-item">
-              <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
+              <img src="/Assets/Images/Gallery/photo_2.jpg" alt="Orange Sofa">
             </div>
             <div class="cat-item">
-              <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
+              <img src="/Assets/Images/Gallery/photo_3.jpg" alt="Orange Sofa">
             </div>
             <div class="cat-item">
-              <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
+              <img src="/Assets/Images/Gallery/photo_4.jpg" alt="Orange Sofa">
             </div>
             <div class="cat-item">
-                <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa">
+                <img src="/Assets/Images/Gallery/photo_5.jpg" alt="Orange Sofa">
             </div>
             <div class="cat-item">
-              <img src="/Assets/Images/Category Photos/sofa-thumb.jpg" alt="Orange Sofa"> 
+              <img src="/Assets/Images/Gallery/photo_6.jpg" alt="Orange Sofa"> 
             </div>
           </div>
           <button class="view-more-btn">View More</button>
