update index.html - removed solo hero image, and created hero carousel adding multiple slides and corresponding content

--- a/index.html
+++ b/index.html
@@ -45,13 +45,36 @@
     <div class="topbanner">
         <p>Use code extra30 for 30% off*</p>
     </div>
-
+    
     <div id= "hero"> <!--Hero Section-->
-        <div class="text-container">
-            <h1>New Collections Available!</h1>
-            <p>*Coming with fast free delivery*</p>
-            <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+      <div class="slideshow-container">
+        <div class="carousel-slide active-slide">
+          <img src="/Assets/Images/whitesofa.jpg">
+          <div class="slide-content">
+              <h1>New Collections Available!</h1>
+              <p>*Coming with fast free delivery*</p>
+              <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+          </div>
         </div>
+
+        <div class="carousel-slide">
+          <img src="/Assets/Images/whitesofa.jpg">
+          <div class="slide-content">
+              <h1>New Collections Available!</h1>
+              <p>*Coming with fast free delivery*</p>
+              <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+          </div>
+        </div>
+
+        <div class="carousel-slide">
+          <img src="/Assets/Images/whitesofa.jpg">
+          <div class="slide-content">
+              <h1>New Collections Available!</h1>
+              <p>*Coming with fast free delivery*</p>
+              <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+          </div>
+        </div>     
+      </div>
     </div>
 
     <main>
@@ -293,5 +316,6 @@
       </footer>
     
       <script src="/JS/navbar-ham-icon.js"></script>
+      <script src="/JS/carousel.js"></script>
 </body>
 </html>
