update index.html - added new images for image carousel and respective text content

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
             <li>
                 <a href="#" class="nav-links">Services</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#" class="nav-links red-link">Sale</a>
-            </li>
+            </li> -->
+            <li>
+              <a href="/Pages/contact.html" class="nav-links">Contact</a>
+          </li>
         </ul>
         <div class="nav-icons">
           <a href="/Pages/account_page.html"><i class="fa fa-user-circle"></i></a></i>
@@ -58,10 +61,10 @@
         </div>
 
         <div class="carousel-slide">
-          <img src="/Assets/Images/whitesofa.jpg">
+          <img src="/Assets/Images/slide_2.jpg">
           <div class="slide-content">
-              <h1>New Collections Available!</h1>
-              <p>*Coming with fast free delivery*</p>
+              <h1>Discover the world of Arflex</h1>
+              <p>Timeless Italian Craftsmanship and Elegance</p>
               <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
           </div>
         </div>
@@ -69,8 +72,8 @@
         <div class="carousel-slide">
           <img src="/Assets/Images/whitesofa.jpg">
           <div class="slide-content">
-              <h1>New Collections Available!</h1>
-              <p>*Coming with fast free delivery*</p>
+              <h1>Stay Updated with Le Luxe</h1>
+              <p>Subscribe to Our Newsletter for Exclusive Updates</p>
               <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
           </div>
         </div>     
