update idnex.html - removed sales nav link and added contact link

--- a/index.html
+++ b/index.html
@@ -49,36 +49,36 @@
         <p>Use code extra30 for 30% off*</p>
     </div>
     
-    <div id= "hero"> <!--Hero Section-->
-      <div class="slideshow-container">
-        <div class="carousel-slide active-slide">
-          <img src="/Assets/Images/whitesofa.jpg">
-          <div class="slide-content">
-              <h1>New Collections Available!</h1>
-              <p>*Coming with fast free delivery*</p>
-              <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
-          </div>
-        </div>
 
-        <div class="carousel-slide">
-          <img src="/Assets/Images/slide_2.jpg">
-          <div class="slide-content">
-              <h1>Discover the world of Arflex</h1>
-              <p>Timeless Italian Craftsmanship and Elegance</p>
-              <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
-          </div>
-        </div>
+<div class="slideshow-container">
 
-        <div class="carousel-slide">
-          <img src="/Assets/Images/whitesofa.jpg">
-          <div class="slide-content">
-              <h1>Stay Updated with Le Luxe</h1>
-              <p>Subscribe to Our Newsletter for Exclusive Updates</p>
-              <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
-          </div>
-        </div>     
-      </div>
+  <div class="carousel-slide fade">
+    <img src="/Assets/Images/whitesofa.jpg" style="width:100%">
+    <div class="slide-content">
+      <h1>New Collections Available!</h1>
+      <p>*Coming with fast free delivery*</p>
+      <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
     </div>
+  </div>
+
+  <div class="carousel-slide fade">
+    <img src="/Assets/Images/slide_2.jpg" style="width:100%">
+    <div class="slide-content">
+      <h1>Discover the world of Arflex</h1>
+      <p>Timeless Italian Craftsmanship and Elegance</p>
+      <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+    </div>
+  </div>
+
+  <div class="carousel-slide fade">
+    <img src="/Assets/Images/whitesofa.jpg" style="width:100%">
+    <div class="slide-content">
+      <h1>Stay Updated with Le Luxe</h1>
+      <p>Subscribe to Our Newsletter for Exclusive Updates</p>
+      <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+    </div>
+  </div>
+</div>
 
     <main>
       <section id ="latest">
