minor styling changes to font weight, buttons

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <img src="/Assets/Images/whitesofa.jpg" style="width:100%">
     <div class="slide-content">
       <h1>New Collections Available!</h1>
-      <p>*Coming with fast free delivery*</p>
+      <p>Coming with fast free delivery</p>
       <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
     </div>
   </div>
