--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="slide-content">
       <h1>New Collections Available!</h1>
       <p>Coming with fast free delivery</p>
-      <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+      <button class="hero-btn"><a href="/Pages/collections.html">Discover</a></button>
     </div>
   </div>
 
@@ -66,7 +66,7 @@
     <div class="slide-content">
       <h1>Discover the world of Arflex</h1>
       <p>Timeless Italian Craftsmanship and Elegance</p>
-      <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+      <button class="hero-btn"><a href="/Pages/collections.html">Discover</a></button>
     </div>
   </div>
 
@@ -75,7 +75,7 @@
     <div class="slide-content">
       <h1>Stay Updated with Le Luxe</h1>
       <p>Subscribe to Our Newsletter for Exclusive Updates</p>
-      <button class="hero-btn"><a href="/Pages/collections.html">Shop Now</a></button>
+      <button class="hero-btn"><a href="/Pages/collections.html">Discover</a></button>
     </div>
   </div>
 </div>
@@ -260,7 +260,7 @@
           <div class="ft-main-item">
             <h2 class="ft-title">About</h2>
             <ul>
-              <li><a href="/Pages/about.html">About Le Luxe</a></li>
+              <li><a href="#">About Le Luxe</a></li>
               <li><a href="#">Press Lounge</a></li>
               <li><a href="#">Investor Relations</a></li>
               <li><a href="#">Careers</a></li>
