--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -55,8 +55,40 @@
   </div>
 
   <main>
+    <section id="contact">
+      <div class="container">
+        <div class="contact-area">
+          <form name="contact-form" class="get-in-touch">
+            <input type="text" id="fullname" class="input-field" placeholder="Your full name" name="fullname">
+            <input type="email" id="email" class="input-field" placeholder="Your email address" name="email">
+            <input type="text" id="message" class="input-field" placeholder="Write your enquiry" name="message">
+            <!-- <div class="form-message" id="displayed-message">
+              <p>Message sent successfully!<i class="fa fa-check"></i></p> 
+            </div> -->
+            <button type="submit" class="form-button" id="submit">Send message</button>
+          </form>
+          <div class="store-details">
+            <div class="detail">
+              <h2>London Showroom</h2>
+              <p>Lorem ipsum</p>
+            </div>
+            <div class="detail">
+              <h2>London Showroom</h2>
+              <p>Lorem ipsum</p>
+            </div>
+            <div class="detail">
+              <h2>London Showroom</h2>
+              <p>Lorem ipsum</p>
+            </div>
+            <div class="detail">
+              <h2>London Showroom</h2>
+              <p>Lorem ipsum</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-       
+    </section>
   </main>
 
 
