--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -60,7 +60,8 @@
         <div class="contact-area">
           <form name="contact-form" class="get-in-touch">
             <input type="text" id="fullname" class="input-field" placeholder="Your full name" name="fullname">
-            <input type="email" id="email" class="input-field" placeholder="Your email address" name="email">
+            <!-- <input type="email" id="email" class="input-field" placeholder="Your email address" name="email"> -->
+            <input type="text" id="number" class="input-field" placeholder="Your phone number" name="number">
             <input type="text" id="message" class="input-field" placeholder="Write your enquiry" name="message">
             <!-- <div class="form-message" id="displayed-message">
               <p>Message sent successfully!<i class="fa fa-check"></i></p> 
@@ -70,19 +71,20 @@
           <div class="store-details">
             <div class="detail">
               <h2>London Showroom</h2>
-              <p>Lorem ipsum</p>
+              <p><i class="fa fa-map-marker"></i>123 Luxe Street, London, W1A 1AA</p>
             </div>
             <div class="detail">
-              <h2>London Showroom</h2>
-              <p>Lorem ipsum</p>
+              <h2>Telephone No.</h2>
+              <p><i class="fa fa-phone"></i>020 1224 7621</p>
             </div>
             <div class="detail">
-              <h2>London Showroom</h2>
-              <p>Lorem ipsum</p>
+              <h2>Email</h2>
+              <p><i class="fa fa-envelope"></i>info@leluxe.co.uk</p>
             </div>
             <div class="detail">
-              <h2>London Showroom</h2>
-              <p>Lorem ipsum</p>
+              <h2>Opening Hours</h2>
+              <p><i class="fa fa-clock-o"></i>Mon-Thurs: 09:30 - 17:30</p>
+              <p><i class="fa fa-clock-o"></i>Sat: 09:00 - 17:00</p>
             </div>
           </div>
         </div>
