--- a/Pages/Products/arflex_sofa.html
+++ b/Pages/Products/arflex_sofa.html
@@ -13,33 +13,33 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <span class="navbar-toggle-icon" id="js-navbar-toggle-icon">
-            <i class="fa fa-bars"></i>
-        </span>
-        <a href="/index.html" class="logo">Le Luxe</a>
-        <ul class="main-nav" id="js-menu">
-            <li>
-                <a href="/Pages/featured.html" class="nav-links">New In</a>
-            </li>
-            <li>
-                <a href="#" class="nav-links">Showroom</a>
-            </li>
-            <li>
-                <a href="/Pages/collections.html" class="nav-links">Collections</a>
-            </li>
-            <li>
-                <a href="#" class="nav-links">Services</a>
-            </li>
-            <li>
-                <a href="#" class="nav-links red-link">Sale</a>
-            </li>
-        </ul>
-        <div class="nav-icons">
-          <a href="/Pages/account_page.html"><i class="fa fa-user-circle"></i></a></i>
-          <a href="#"><i class="fa fa-shopping-cart"></i></a></i>
-        </div>
-    </nav>
+  <nav class="navbar">
+    <span class="navbar-toggle-icon" id="js-navbar-toggle-icon">
+      <i class="fa fa-bars"></i>
+    </span>
+    <a href="index.html" class="logo">Le Luxe</a>
+    <ul class="main-nav" id="js-menu">
+      <li>
+        <a href="/index.html" class="nav-links">Home</a>
+      </li>
+      <li>
+        <a href="/Pages/featured.html" class="nav-links">Shop</a>
+      </li>
+      <li>
+        <a href="/Pages/collections.html" class="nav-links">Collections</a>
+      </li>
+      <li>
+        <a href="#" class="nav-links">Inspiration</a>
+      </li>
+      <li>
+        <a href="/Pages/contact.html" class="nav-links">Contact</a>
+      </li>
+    </ul>
+    <div class="nav-icons">
+      <a href="/Pages/account_page.html"><i class="fa fa-user-circle"></i></a></i>
+      <a href="#"><i class="fa fa-shopping-cart"></i></a></i>
+    </div>
+  </nav>
 
     <div class="topbanner">
         <p>Use code extra30 for 30% off*</p>
