--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -14,25 +14,22 @@
 <body>
   <nav class="navbar">
     <span class="navbar-toggle-icon" id="js-navbar-toggle-icon">
-        <i class="fa fa-bars"></i>
+      <i class="fa fa-bars"></i>
     </span>
-    <a href="/index.html" class="logo">Le Luxe</a>
+    <a href="index.html" class="logo">Le Luxe</a>
     <ul class="main-nav" id="js-menu">
       <li>
-          <a href="/Pages/featured.html" class="nav-links">New In</a>
+        <a href="/index.html" class="nav-links">Home</a>
       </li>
       <li>
-          <a href="#" class="nav-links">Showroom</a>
+        <a href="/Pages/featured.html" class="nav-links">Shop</a>
       </li>
       <li>
-          <a href="/Pages/collections.html" class="nav-links">Collections</a>
+        <a href="/Pages/collections.html" class="nav-links">Collections</a>
       </li>
       <li>
-          <a href="#" class="nav-links">Services</a>
+        <a href="#" class="nav-links">Inspiration</a>
       </li>
-      <!-- <li>
-          <a href="#" class="nav-links red-link">Sale</a>
-      </li> -->
       <li>
         <a href="/Pages/contact.html" class="nav-links">Contact</a>
       </li>
