WORKING PROGRESS - revised navbar with dropdown menu

--- a/index.html
+++ b/index.html
@@ -21,9 +21,28 @@
           <li>
             <a href="/index.html" class="nav-links">Home</a>
           </li>
-          <li>
-            <a href="/Pages/featured.html" class="nav-links">Shop</a>
-          </li>
+          <div class="dropdown">
+            <a href="#" class="dropbtn">Shop <i class="fa fa-caret-down"></i></a>
+            <div class="dropdown-content">
+              <div class="row">
+                <div class="column">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+                <div class="column">
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 5</a>
+                  <a href="#">Link 6</a>
+                </div>
+                <div class="column">
+                  <a href="#">Link 7</a>
+                  <a href="#">Link 8</a>
+                  <a href="#">Link 9</a>
+                </div>
+              </div>
+            </div>
+          </div>         
           <li>
             <a href="/Pages/collections.html" class="nav-links">Collections</a>
           </li>
