update index.html - added necessary links to dropdown nav menu

--- a/index.html
+++ b/index.html
@@ -22,23 +22,27 @@
             <a href="/index.html" class="nav-links">Home</a>
           </li>
           <div class="dropdown">
-            <a href="#" class="dropbtn">Shop <i class="fa fa-caret-down"></i></a>
+            <a href="#" class="nav-links dropbtn">Shop <i class="fa fa-caret-down"></i></a>
             <div class="dropdown-content">
               <div class="row">
                 <div class="column">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="/Pages/featured.html">Latest arrivals</a>
+                  <a href="#">Limited Edition</a>
+                  <a href="#">Seasonal sale</a>
+                  <a href="#">Best sellers</a>
                 </div>
                 <div class="column">
-                  <a href="#">Link 4</a>
-                  <a href="#">Link 5</a>
-                  <a href="#">Link 6</a>
+                  <a href="#">Sofas</a>
+                  <a href="#">Tables</a>
+                  <a href="#">Lighting</a>
+                  <a href="#">Dining Chairs</a>
+                  <a href="#">Bedroom</a>
+                  <a href="#">Accessories</a>
                 </div>
                 <div class="column">
-                  <a href="#">Link 7</a>
-                  <a href="#">Link 8</a>
-                  <a href="#">Link 9</a>
+                  <a href="#">Home decor</a>
+                  <a href="#">outlet</a>
+                  <a href="#">Design services</a>
                 </div>
               </div>
             </div>
