--- a/Pages/account_page.html
+++ b/Pages/account_page.html
@@ -22,9 +22,32 @@
       <li>
         <a href="/index.html" class="nav-links">Home</a>
       </li>
-      <li>
-        <a href="/Pages/featured.html" class="nav-links">Shop</a>
-      </li>
+      <div class="dropdown">
+        <a href="#" class="nav-links dropbtn">Shop <i class="fa fa-caret-down"></i></a>
+        <div class="dropdown-content">
+          <div class="row">
+            <div class="column">
+              <a href="/Pages/featured.html">Latest arrivals</a>
+              <a href="#">Limited Edition</a>
+              <a href="#">Seasonal sale</a>
+              <a href="#">Best sellers</a>
+            </div>
+            <div class="column">
+              <a href="#">Sofas</a>
+              <a href="#">Tables</a>
+              <a href="#">Lighting</a>
+              <a href="#">Dining Chairs</a>
+              <a href="#">Bedroom</a>
+              <a href="#">Accessories</a>
+            </div>
+            <div class="column">
+              <a href="#">Home decor</a>
+              <a href="#">outlet</a>
+              <a href="#">Design services</a>
+            </div>
+          </div>
+        </div>
+      </div>         
       <li>
         <a href="/Pages/collections.html" class="nav-links">Collections</a>
       </li>
