homepage - made dropdown menu responsiveness on mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="/index.html" class="nav-links">Home</a>
           </li>
           <div class="dropdown">
-            <a href="#" class="nav-links dropbtn">Shop <i class="fa fa-caret-down"></i></a>
+            <li><a href="#" class="nav-links dropbtn">Shop <i class="fa fa-caret-down"></i></a></li>
             <div class="dropdown-content">
               <div class="row">
                 <div class="column">
