update index.html - rewrote carousel text and added different images

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
     <div class="slide-content">
       <h1>Discover the world of Arflex</h1>
       <p>Timeless Italian Craftsmanship and Elegance</p>
-      <button class="hero-btn"><a href="/Pages/collections.html">Discover</a></button>
+      <button class="hero-btn"><a href="#">Discover</a></button>
     </div>
   </div>
 
   <div class="carousel-slide fade">
-    <img src="/Assets/Images/whitesofa.jpg" style="width:100%">
+    <img src="/Assets/Images/slide_3.jpg" style="width:100%">
     <div class="slide-content">
-      <h1>Stay Updated with Le Luxe</h1>
-      <p>Subscribe to Our Newsletter for Exclusive Updates</p>
-      <button class="hero-btn"><a href="/Pages/collections.html">Discover</a></button>
+      <h1>Summer Sale: Up to 50% Off!</h1>
+      <p>Discover Huge Savings On Our Stylish Furniture Collection</p>
+      <button class="hero-btn"><a href="#">Discover</a></button>
     </div>
   </div>
 </div>
